<resources>
    <string name="app_name">NetworkDebugTool</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="welcome">"欢迎 !"</string>
    <string name="invalid_username">请输入有效的邮箱地址!</string>
    <string name="invalid_password">密码长度至少为8位!</string>
    <string name="login_failed">登录失败!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tcp_udp">TCP/UDP</string>
    <string name="title_http">HTTP</string>
    <string name="title_serial">串口调试</string>
    <string name="title_user_settings">用户中心</string>
    <string name="prompt_remote_ip">远程IP</string>
    <string name="prompt_remote_port">远程端口</string>
    <string name="prompt_local_port">本地端口</string>
    <string name="prompt_tcp_udp_mode">TCP/UDP模式</string>
    <string name="description_btn_refresh">refresh device info</string>
    <string name="start_tcpudp_session">创建TCP/UDP连接</string>
    <string-array name="tcpudp_mode_list">
        <item>TCP服务器</item>
        <item>TCP客户端</item>
        <item>UDP</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="invalid_local_port">请输入1至65535的整数</string>
    <string name="invalid_remote_ip">请输入合法的IPv4地址</string>
    <string name="invalid_remote_port">请输入1至65535的整数</string>
    <string name="btn_send_msg">发送</string>
    <string name="prompt_send_msg">输入要发送的消息</string>
    <string name="clear_msg_record">清除记录</string>
    <string name="setup_receive">16进制接收</string>
    <string name="setup_send">16进制发送</string>
    <string name="select_target_host">选择目标主机</string>
</resources>