<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tcpudp.TcpUdpFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tcpUdpModeSelector"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/prompt_tcp_udp_mode"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_mode_list_24dp">

        <AutoCompleteTextView
            android:id="@+id/tcpudp_mode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="-10dp"
            android:inputType="none"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/remoteIPWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/prompt_remote_ip"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tcpUdpModeSelector"
        app:startIconDrawable="@drawable/ic_host_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/remoteIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="-10dp"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/remotePortWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/prompt_remote_port"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/guideline_center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/remoteIPWrapper"
        app:startIconDrawable="@drawable/ic_port_number_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/remotePort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="-10dp"
            android:inputType="number"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/localPortWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/prompt_local_port"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_center"
        app:layout_constraintTop_toBottomOf="@id/remoteIPWrapper"
        app:startIconDrawable="@drawable/ic_port_number_24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/localPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="-10dp"
            android:inputType="number"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/promptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tcpUdpModeSelector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="本机IP地址" />

    <ImageButton
        android:id="@+id/btn_refresh_ip"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/description_btn_refresh"
        android:scaleType="centerInside"
        android:src="@drawable/ic_refresh_30dp"
        app:layout_constraintBottom_toTopOf="@+id/tcpUdpModeSelector"
        app:layout_constraintEnd_toEndOf="@+id/tcpUdpModeSelector"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_new_tcpudp_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:enabled="false"
        android:text="@string/start_tcpudp_session"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/localPortWrapper" />


</androidx.constraintlayout.widget.ConstraintLayout>